--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "coffeescript": "1.12.7",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react_ujs": "^2.4.3"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.7"
